gcp-gke/k-deployment-caddy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: caddy
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: caddy
    spec:
      containers:
        - args:
            - caddy
            - run
            - --config
            - /etc/caddy/Caddyfile
          image: caddy:2.4.5
          imagePullPolicy: IfNotPresent
          name: caddy
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
