gcp-gke/k-deployment-info-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: info
  name: info-canary
spec:
  replicas: 2
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: info
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: info
    spec:
      containers:
        - env:
            - name: GENERATION
              value: "canary"
          image: europe-docker.pkg.dev/iproov-chiro/gke/info-service:v8
          imagePullPolicy: Always
          name: info-canary-container
          volumeMounts:
            - name: data-volume
              mountPath: /shared
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.5"
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: storage-volume
