gcp-gke/k-service-loadbalancer-caddy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: caddy-loadbalancer
  name: caddy-loadbalancer
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: caddy
  type: LoadBalancer
