gcp-gke/k-service-loadbalancer-info.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: info-loadbalancer
  name: info-loadbalancer
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: info
  type: LoadBalancer
