gcp-gke/k-service-nodeport-caddy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: caddy-nodeport
  name: caddy-nodeport
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: caddy
  type: NodePort
