gcp-gke/k-service-nodeport-info.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: info-nodeport
  name: info-nodeport
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: info
  type: NodePort
