gcp-gke/k-ingress-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
    - http:
        paths:
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: caddy-nodeport
                port:
                  number: 80
          - path: /info
            pathType: Prefix
            backend:
              service:
                name: info-nodeport
                port:
                  number: 8000
